--- a/heiho.css
+++ b/heiho.css
@@ -18,7 +18,13 @@ body.heiho-body > #heiho-view {display: block}
 	background: black;
 }
 
-#heiho-view-header {color:white; padding: 1em; background:#333; border-bottom:solid 3px black; font: normal 13px arial;}
+#heiho-view-header {background:#333; border-bottom:solid 3px black; height: 36px; overflow: hidden}
+
+#heiho-view-title {color: white; font: normal 13px arial; line-height: 2.85em; padding-left: .75em}
+
+#heiho-view-close {float: right; background: #222; height: 36px; width: 36px; display: inline-block; text-align: center; vertical-align: middle}
+#heiho-view-close:before {content: "×"; color: #ccc; display: inline-block; margin-top: 8px;}
+#heiho-view-close:hover {cursor: pointer; background: #000; color: white}
 
 #heiho-view-scroll {overflow:auto}
 
