--- a/heiho.css
+++ b/heiho.css
@@ -7,16 +7,40 @@
 body.heiho-body > * {display:none}
 body.heiho-body > #heiho-view {display: block}
 
-#heiho-view
-{
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
+/*
+* #heiho-view
+*  |
+*  + #heiho-view-header
+*  |  |
+*  |  + #heiho-view-close
+*  |  |
+*  |  + #heiho-view-title
+*  |
+*  + #heiho-view-scroll
+*  |  |
+*  |  + #heiho-view-table
+*  |     |
+*  |     + #heiho-view-thead
+*  |     |	|
+*  |     |	+ th
+*  |     |	+ ...
+*  |     |	+ th
+*  |     |
+*  |     + #heiho-view-tbody
+*  |       |
+*  |       + tr
+*  |       |  |
+*  |       |  td
+*  |       |  ...
+*  |       |  td
+*  |       |
+*  |       + ...
+*  |       + tr
+*  |
+*  + #heiho-view-truncated
+*/
 
-	background: black;
-}
+#heiho-view {position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: black}
 
 #heiho-view-header {background:#333; border-bottom:solid 3px black; height: 36px; overflow: hidden}
 
@@ -34,7 +58,7 @@ body.heiho-body > #heiho-view {display: block}
 #heiho-view-thead th {background: #444; color: white; min-width: 40px; border: solid 1px black; padding: 4px;}
 #heiho-view-thead th:first-child {min-width: 0; background: #111}
 
-#heiho-view-tbody td {background: white; color: #555; padding: 1px 3px; border: solid 1px #ccc;}
+#heiho-view-tbody td {background: white; color: #555; padding: 1px 3px; border: solid 1px #ccc; vertical-align: top}
 #heiho-view-tbody td:first-child {background: #444; color: #bbb; width: 1%; min-width:25px; border: solid 1px black; text-align:center; vertical-align: middle; font: normal 10px arial;}
 
 #heiho-view-tbody tr:hover td {background:lightyellow}
